--- a/exercicios/ex006/style.css
+++ b/exercicios/ex006/style.css
@@ -11,24 +11,32 @@ body {
 }
 
 header { 
-      color: white;
-      text-align: center;
-      padding-top: 10px;
-      padding-bottom: 10px;
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 section { 
-        background: white;
-        border-radius: 10px;
-        padding: 15px;
-        width: 500px;
-        margin: auto;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.322);
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.322);
+}
+
+section > div > p { 
+    padding-bottom: 5px;
+}
+
+#flista { 
+   width: 150px; 
 }
 
 footer { 
-      color: white;
-      text-align: center;
-      font-style: italic;
-      padding-top: 10px;
+    color: white;
+    text-align: center;
+    font-style: italic;
+    padding-top: 10px;
 }
